--- a/sass/style.sass
+++ b/sass/style.sass
@@ -2,7 +2,7 @@
 @import 'elements'
 @import 'header'
 @import 'footer'
-@import 'anim'
+// @import 'anim'
 // @import 'slick'
 @import 'modal'
 
@@ -235,6 +235,43 @@
             max-width: 80%
             max-height: 90%
 
+.slider
+    background-color: #fff
+    padding: 120px 0
+    .headline
+        color: #000
+        margin-bottom: 120px
+    &-slide
+        background-color: #696969
+        border-radius: 50px
+        overflow: hidden
+        padding: 147px 250px 86px 478px
+        position: relative
+        z-index: 1
+
+    &__heading
+        font-weight: 400
+        font-size: 36px
+        line-height: 44px
+        margin-bottom: 75px
+
+    &__img
+        position: absolute
+        top: 0
+        left: 0
+        width: 100%
+        height: 100%
+        z-index: -1
+        object-fit: cover
+
+    &__item 
+        max-width: 45%
+        margin: 0 0 50px
+
+    .wrap-start 
+        flex-wrap: wrap
+
+
 @media screen and ( max-width: 1600px )
     .main
         h1
@@ -302,9 +339,10 @@
                 bottom: 40px
                 left: 50%
                 transform: translateX(-50%)
-                z-index: 100000
+                z-index: 10000000
                 padding-right: 80px
                 max-width: 350px
+
         h1
             max-width: 100%
             text-align: center
